--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "@oanda/v20",
-  "version": "0.0.1",
-  "repository": "git@github.com:narative/v20-javascript.git",
-  "author": "Narative <engineering@feyapp.com>",
-  "license": "Unlicensed",
-  "private": true,
-  "files": ["src/**/*"]
+    "name": "@oanda/v20",
+    "description": "OANDA v20 bindings for Javascript",
+    "version": "3.0.25-0",
+    "author": "OANDA Corporation",
+    "license": "MIT",
+    "homepage": "http://developer.oanda.com/rest-live-v20/introduction"
 }
