--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "@oanda/v20",
+    "name": "@narative/oanda-v20",
     "description": "OANDA v20 bindings for Javascript",
     "version": "3.0.25-0",
     "author": "OANDA Corporation",
+    "repository": "https://github.com/narative/v20-javascript",
     "license": "MIT",
     "homepage": "http://developer.oanda.com/rest-live-v20/introduction"
 }
